CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)
PROJECT(QGLUT)

SET(LIBS)

INCLUDE_DIRECTORIES(${QGLUT_SOURCE_DIR}/include)	

# Qt
SET(QT_MIN_VERSION 4.2.0)
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTOPENGL true)
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/src)
#SET(LIBS ${LIBS} ${QT_QTCORE_LIBRARY_DEBUG} ${QT_QTGUI_LIBRARY_DEBUG} ${QT_QTOPENGL_LIBRARY_DEBUG})
SET(LIBS ${LIBS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY})

# OpenGL
FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_PATH})
SET(LIBS ${LIBS} ${OPENGL_LIBRARIES})

# GLUT
#FIND_PACKAGE(GLUT REQUIRED)
#INCLUDE_DIRECTORIES(${GLUT_INCLUDE_PATH})
	
SUBDIRS(src)
